--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ bezkoder.app.jwtExpirationMs= 300000
 server.port=8084
 
 #Database MySQL Connection
-#spring.datasource.url=jdbc:mysql://localhost:3306/blog?useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/blog
 #spring.datasource.username=root
 #spring.datasource.password=bunde1234
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
