--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,18 +6,18 @@ bezkoder.app.jwtExpirationMs= 300000
 server.port=8084
 
 #Database MySQL Connection
-spring.datasource.url=jdbc:mysql://localhost:3306/icd?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=bunde1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/icd?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=bunde1234
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 
 #Postgres connection
-#spring.datasource.url = jdbc:postgresql://localhost:5432/blog
-#spring.datasource.username = adempiere
-#spring.datasource.password = bunde1234
-#pring.jpa.properties.hibernate.dialect =  org.hibernate.dialect.PostgreSQL95Dialect
+spring.datasource.url = jdbc:postgresql://localhost:5432/blog
+spring.datasource.username = adempiere
+spring.datasource.password = bunde1234
+pring.jpa.properties.hibernate.dialect =  org.hibernate.dialect.PostgreSQL95Dialect
 
 
 # Additional properties for Hibernate
